[xbindkeys] Correct keybind for finely raising mic vol.
Mod5 + XF86AudioRaiseVolume was already taken by "Raise mic volume". The
other "fine" controls had Shift added, so Shift was added to this one.

--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -53,7 +53,7 @@
 
 # Raise mic volume (fine)
 "/usr/bin/amixer -q set Capture 2+"
-  Mod5 + XF86AudioRaiseVolume
+  Shift+Mod5 + XF86AudioRaiseVolume
 
 # Decrease volume
 "/usr/bin/amixer -q set Master 2-"
