[xbindkeys] Add keybind to toggle screensaver
Alt + XF86ScreenSaver will toggle the screensaver using
toggle-screensaver
(https://github.com/tpenguinltg/scripts/blob/master/toggle-screensaver)

--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -231,6 +231,10 @@
 "/usr/bin/xscreensaver-command -lock"
   XF86ScreenSaver
 
+# Toggle screensaver
+"toggle-screensaver"
+  Alt + XF86ScreenSaver
+
 # Take screenshot of current window
 #"screenshot-window"
 #  Alt + Print
