--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
 	ls-ignored = "!git ls-files -v | grep '^h' | cut -c 3-"
 	gen-ignore = "!_gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; _gi"
 	init-commit = !git init && git commit --allow-empty -m \"Initial commit\" -m \"This commit intentionally left blank.\"
+	push-new = "!_pn() { git push -u origin "$(git rev-parse --abbrev-ref HEAD)" "$@"; }; _pn"
 [push]
 	default = simple
 [merge]
