[git] Add push-lease alias
--force-with-lease is a much safer alternative to --force

https://developer.atlassian.com/blog/2015/04/force-with-lease/

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
 	gen-ignore = "!_gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; _gi"
 	init-commit = !git init && git commit --allow-empty -m \"Initial commit\" -m \"This commit intentionally left blank.\"
 	push-new = "!_pn() { git push -u origin "$(git rev-parse --abbrev-ref HEAD)" "$@"; }; _pn"
+	push-lease = push --force-with-lease
 [push]
 	default = simple
 [merge]
