[git] Change pr alias to pulre
The `hub` utility now uses `pr` to manage pull requests for the current
project and apparently aliases don't get recognized before `hub`
commands.

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 [credential]
 	helper = cache
 [alias]
-	pr = pull --rebase
+	pulre = pull --rebase
 	sq = "!_sq() { git rebase --interactive --autosquash $(git merge-base HEAD "${1:-master}"); }; _sq"
 	amend = commit --amend --no-edit
 	ignore = update-index --assume-unchanged
