[git] Add alias to show the commit graph
This is assigned to the  graph  alias.

--- a/.gitconfig
+++ b/.gitconfig
@@ -19,6 +19,7 @@
 	push-lease = push --force-with-lease
 	fixup = commit --fixup
 	stat = status --short --branch
+	graph = log --graph --oneline
 [push]
 	default = simple
 [merge]
