--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
 	ls-ignored = "!git ls-files -v | grep '^h' | cut -c 3-"
 	gen-ignore = "!_gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; _gi"
 	init-commit = !git init && git commit --allow-empty -m \"Initial commit\" -m \"This commit intentionally left blank.\"
-	push-new = "!_pn() { git push -u origin "$(git rev-parse --abbrev-ref HEAD)" "$@"; }; _pn"
+	push-new = push -u origin HEAD
 	push-lease = push --force-with-lease
 	fixup = commit --fixup
 	stat = status --short --branch
